# fall-detection

./: .gitignore  README.md  generate_wan_video.py  pyproject.toml  requirements.txt  requirements_wan.txt  start.md
notebooks/: 01_Wykrywanie_pozycji.ipynb  02_Eksploracja_danych.ipynb  03_Trenowanie_modeli.ipynb  04_Ewaluacja_i_walidacja.ipynb
scripts/: download_model.py  evaluate.py  extract_landmarks.py  train.py
src/: __init__.py
src/data/: __init__.py  features.py  generator.py  loader.py
src/evaluation/: __init__.py  metrics.py
src/extraction/: __init__.py  batch_extractor.py  pose_extractor.py
src/models/: __init__.py  lstm.py  random_forest.py
